versioned_docs/version-2.0/reference/subsystems/python-setup.mdx
---
title: python-setup
description: |
  A Python environment.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A Python environment.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[python-setup]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `interpreter_constraints`

<Option
  cli_repr={`--python-setup-interpreter-constraints="[<requirement>, <requirement>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS'
  toml_repr={`[python-setup]
interpreter_constraints = [
    <requirement>,
    <requirement>,
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6"\n]`}
>

Constrain the selected Python interpreter. Specify with requirement syntax, e.g. &#x27;CPython&#x3E;=2.7,&#x3C;3&#x27; (A CPython interpreter with version &#x3E;=2.7 AND version &#x3C;3)or &#x27;PyPy&#x27; (A pypy interpreter of any version). Multiple constraint strings will be ORed together. These constraints are used as the default value for the `compatibility` field of Python targets.

</Option>

### `requirement_constraints`

<Option
  cli_repr={`--python-setup-requirement-constraints=<file_option>`}
  env_repr='PANTS_PYTHON_SETUP_REQUIREMENT_CONSTRAINTS'
  toml_repr={`[python-setup]
requirement_constraints = <file_option>`}
  default_repr={`None`}
>

When resolving third-party requirements, use this constraints file to determine which versions to use. See https://pip.pypa.io/en/stable/user_guide/#constraints-files for more information on the format of constraint files and how constraints are applied in Pex and pip.

</Option>

### `resolve_all_constraints`

<Option
  cli_repr={`--python-setup-resolve-all-constraints=<ResolveAllConstraintsOption>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVE_ALL_CONSTRAINTS'
  toml_repr={`[python-setup]
resolve_all_constraints = <ResolveAllConstraintsOption>`}
  one_of='never, nondeployables, always'
  default_repr={`nondeployables`}
>

If set, and the requirements of the code being operated on are a subset of the constraints file, then the entire constraints file will be used instead of the subset. If unset, or any requirement of the code being operated on is not in the constraints file, each subset will be independently resolved as needed, which is more correct - work is only invalidated if a requirement it actually depends on changes - but also a lot slower, due to the extra resolving.

- `never` will always use proper subsets, regardless of the goal being run.
- `nondeployables` will use proper subsets for `./pants package`, but otherwise attempt to use a single resolve.
- `always` will always attempt to use a single resolve.

Requires [python-setup].requirement_constraints to be set.

</Option>

### `interpreter_search_paths`

<Option
  cli_repr={`--python-setup-interpreter-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_SEARCH_PATHS'
  toml_repr={`[python-setup]
interpreter_search_paths = [
    <binary-paths>,
    <binary-paths>,
    ...,
]`}
  default_repr={`[\n  "<PYENV>",\n  "<PATH>"\n]`}
>

A list of paths to search for Python interpreters that match your project&#x27;s interpreter constraints. You can specify absolute paths to interpreter binaries and/or to directories containing interpreter binaries. The order of entries does not matter. The following special strings are supported:

- &#x22;&#x3C;PATH&#x3E;&#x22;, the contents of the PATH env var
- &#x22;&#x3C;PYENV&#x3E;&#x22;, all Python versions under $(pyenv root)/versions
- &#x22;&#x3C;PYENV_LOCAL&#x3E;&#x22;, the Pyenv interpreter with the version in BUILD_ROOT/.python-version
- &#x22;&#x3C;PEXRC&#x3E;&#x22;, paths in the PEX_PYTHON_PATH variable in /etc/pexrc or ~/.pexrc

</Option>

### `resolver_manylinux`

<Option
  cli_repr={`--python-setup-resolver-manylinux=<str>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_MANYLINUX'
  toml_repr={`[python-setup]
resolver_manylinux = <str>`}
  default_repr={`manylinux2014`}
>

Whether to allow resolution of manylinux wheels when resolving requirements for foreign linux platforms. The value should be a manylinux platform upper bound, e.g.: &#x27;manylinux2010&#x27;, or else the string &#x27;no&#x27; to disallow.

</Option>

### `resolver_jobs`

<Option
  cli_repr={`--python-setup-resolver-jobs=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_JOBS'
  toml_repr={`[python-setup]
resolver_jobs = <int>`}
  default_repr={`32`}
>

The maximum number of concurrent jobs to build wheels with. Because Pants can run multiple subprocesses in parallel, the maximum total parallelism will be `--process-execution-{local,remote}-parallelism x --python-setup-resolver-jobs`. Setting this option higher may result in better parallelism, but, if set too high, may result in starvation and Out of Memory errors.

</Option>

### `resolver_http_cache_ttl`

<Option
  cli_repr={`--python-setup-resolver-http-cache-ttl=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_HTTP_CACHE_TTL'
  toml_repr={`[python-setup]
resolver_http_cache_ttl = <int>`}
  default_repr={`3600`}
>

The maximum time (in seconds) for items in the HTTP cache. When the cache expires,the PEX resolver will make network requests to see if new versions of your requirements are available.

</Option>

## Deprecated options

### `platforms`

<Option
  cli_repr={`--python-setup-platforms="[<platform>, <platform>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_PLATFORMS'
  toml_repr={`[python-setup]
platforms = [
    <platform>,
    <platform>,
    ...,
]`}
  default_repr={`[\n  "current"\n]`}
  removal_version='2.1.0.dev0'
  removal_hint={'The option `--python-setup-platforms` does not do anything anymore. Instead, explicitly set the `platforms` field on each `pex_binary` target.'}
>

A list of platforms to be supported by this Python environment. Each platformis a string, as returned by pkg_resources.get_supported_platform().

</Option>

### `interpreter_cache_dir`

<Option
  cli_repr={`--python-setup-interpreter-cache-dir=<dir>`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_CACHE_DIR'
  toml_repr={`[python-setup]
interpreter_cache_dir = <dir>`}
  default_repr={`None`}
  removal_version='2.1.0.dev0'
  removal_hint={'The option `--python-setup-interpreter-cache-dir` does not do anything anymore.Instead, use the global option `--named-caches-dir`.'}
>

The parent directory for the interpreter cache. If unspecified, a standard path under the workdir is used.

</Option>

### `resolver_cache_dir`

<Option
  cli_repr={`--python-setup-resolver-cache-dir=<dir>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_CACHE_DIR'
  toml_repr={`[python-setup]
resolver_cache_dir = <dir>`}
  default_repr={`None`}
  removal_version='2.1.0.dev0'
  removal_hint={'The option `--python-setup-resolver-cache-dir` does not do anything anymore. Instead, use the global option `--named-caches-dir`.'}
>

The parent directory for the requirement resolver cache. If unspecified, a standard path under the workdir is used.

</Option>

### `resolver_allow_prereleases`

<Option
  cli_repr={`--[no-]python-setup-resolver-allow-prereleases`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_ALLOW_PRERELEASES'
  toml_repr={`[python-setup]
resolver_allow_prereleases = <bool>`}
  default_repr={`None`}
  removal_version='2.1.0.dev0'
  removal_hint={'The option `--python-setup-resolver-allow-prereleases` does not no anything. To use a pre-release, explicitly use that pre-release version in your requirement string, e.g. `my_dist==99.0.dev0`.'}
>

Whether to include pre-releases when resolving requirements.

</Option>

## Related subsystems

None

</span>
