versioned_docs/version-2.2/reference/subsystems/python-setup.mdx
---
title: python-setup
description: |
  Options for Pants&#x27;s Python support.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Pants&#x27;s Python support.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[python-setup]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `interpreter_constraints`

<Option
  cli_repr={`--python-setup-interpreter-constraints="[<requirement>, <requirement>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_CONSTRAINTS'
  toml_repr={`[python-setup]
interpreter_constraints = [
    <requirement>,
    <requirement>,
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6"\n]`}
>

The Python interpreters your codebase is compatible with.

Specify with requirement syntax, e.g. &#x27;CPython&#x3E;=2.7,&#x3C;3&#x27; (A CPython interpreter with version &#x3E;=2.7 AND version &#x3C;3) or &#x27;PyPy&#x27; (A pypy interpreter of any version). Multiple constraint strings will be ORed together.

These constraints are used as the default value for the `interpreter_constraints` field of Python targets.

</Option>

### `interpreter_search_paths`

<Option
  cli_repr={`--python-setup-interpreter-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PYTHON_SETUP_INTERPRETER_SEARCH_PATHS'
  toml_repr={`[python-setup]
interpreter_search_paths = [
    <binary-paths>,
    <binary-paths>,
    ...,
]`}
  default_repr={`[\n  "<PYENV>",\n  "<PATH>"\n]`}
>

A list of paths to search for Python interpreters that match your project&#x27;s interpreter constraints. You can specify absolute paths to interpreter binaries and/or to directories containing interpreter binaries. The order of entries does not matter. The following special strings are supported:

- &#x22;&#x3C;PATH&#x3E;&#x22;, the contents of the PATH env var
- &#x22;&#x3C;PYENV&#x3E;&#x22;, all Python versions under $(pyenv root)/versions
- &#x22;&#x3C;PYENV_LOCAL&#x3E;&#x22;, the Pyenv interpreter with the version in BUILD_ROOT/.python-version
- &#x22;&#x3C;PEXRC&#x3E;&#x22;, paths in the PEX_PYTHON_PATH variable in /etc/pexrc or ~/.pexrc

</Option>

### `requirement_constraints`

<Option
  cli_repr={`--python-setup-requirement-constraints=<file_option>`}
  env_repr='PANTS_PYTHON_SETUP_REQUIREMENT_CONSTRAINTS'
  toml_repr={`[python-setup]
requirement_constraints = <file_option>`}
  default_repr={`None`}
>

When resolving third-party requirements, use this constraints file to determine which versions to use.

See https://pip.pypa.io/en/stable/user_guide/#constraints-files for more information on the format of constraint files and how constraints are applied in Pex and pip.

</Option>

### `resolve_all_constraints`

<Option
  cli_repr={`--python-setup-resolve-all-constraints=<ResolveAllConstraintsOption>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVE_ALL_CONSTRAINTS'
  toml_repr={`[python-setup]
resolve_all_constraints = <ResolveAllConstraintsOption>`}
  one_of='never, nondeployables, always'
  default_repr={`nondeployables`}
>

If set, and the requirements of the code being operated on are a subset of the constraints file, then the entire constraints file will be used instead of the subset. If unset, or any requirement of the code being operated on is not in the constraints file, each subset will be independently resolved as needed, which is more correct - work is only invalidated if a requirement it actually depends on changes - but also a lot slower, due to the extra resolving.

- `never` will always use proper subsets, regardless of the goal being run.
- `nondeployables` will use proper subsets for `./pants package`, but otherwise attempt to use a single resolve.
- `always` will always attempt to use a single resolve.

Requires [python-setup].requirement_constraints to be set.

</Option>

### `resolver_jobs`

<Option
  cli_repr={`--python-setup-resolver-jobs=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_JOBS'
  toml_repr={`[python-setup]
resolver_jobs = <int>`}
  default_repr={`32`}
>

The maximum number of concurrent jobs to build wheels with. Because Pants can run multiple subprocesses in parallel, the maximum total parallelism will be `--process-execution-{local,remote}-parallelism x --python-setup-resolver-jobs`. Setting this option higher may result in better parallelism, but, if set too high, may result in starvation and Out of Memory errors.

</Option>

### `resolver_manylinux`

<Option
  cli_repr={`--python-setup-resolver-manylinux=<str>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_MANYLINUX'
  toml_repr={`[python-setup]
resolver_manylinux = <str>`}
  default_repr={`manylinux2014`}
>

Whether to allow resolution of manylinux wheels when resolving requirements for foreign linux platforms. The value should be a manylinux platform upper bound, e.g.: &#x27;manylinux2010&#x27;, or else the string &#x27;no&#x27; to disallow.

</Option>

### `resolver_version`

<Option
  cli_repr={`--python-setup-resolver-version=<ResolverVersion>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_VERSION'
  toml_repr={`[python-setup]
resolver_version = <ResolverVersion>`}
  one_of='pip-legacy-resolver, pip-2020-resolver'
  default_repr={`pip-legacy-resolver`}
  removal_version='2.5.0.dev1'
  removal_hint={''}
>

The resolver implementation to use when resolving Python requirements.

Support for the &#x27;pip-legacy-resolver&#x27; will be removed in Pants 2.5; so you&#x27;re encouraged to start using the &#x27;pip-2020-resolver&#x27; early. For more information on this change see https://pip.pypa.io/en/latest/user_guide/#changes-to-the-pip-dependency-resolver-in-20-2-2020

</Option>

## Deprecated options

### `resolver_http_cache_ttl`

<Option
  cli_repr={`--python-setup-resolver-http-cache-ttl=<int>`}
  env_repr='PANTS_PYTHON_SETUP_RESOLVER_HTTP_CACHE_TTL'
  toml_repr={`[python-setup]
resolver_http_cache_ttl = <int>`}
  default_repr={`0`}
  removal_version='2.4.0.dev1'
  removal_hint={'Unused.'}
>

Unused.

</Option>

## Related subsystems

None

</span>
